--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,6 +2,8 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
+ 
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,8 +14,9 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.1",
     "nodemon": "^3.1.10",
