--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,5 +14,13 @@
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.4.0",
     "nodemon": "^3.1.10"
+  },
+  "dependencies": {
+    "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.15.2"
   }
 }
